--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "tsx": "^3.12.6"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
