--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "tsx src/server",
     "dev": "vite --host",
     "dev-node": "tsx watch src/server",
     "build": "tsc && vite build",
@@ -17,6 +18,7 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remult": "^0.18.1",
